Import of MARKOV/Payment-Sisow-0.12 from CPAN.
gitpan-cpan-distribution: Payment-Sisow
gitpan-cpan-version:      0.12
gitpan-cpan-path:         MARKOV/Payment-Sisow-0.12.tar.gz
gitpan-cpan-author:       MARKOV
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -21,8 +21,8 @@ requires:
   Digest::SHA1: 0
   File::Basename: 0
   File::Spec: 0
-  Log::Report: 0.99
+  Log::Report: 1.00
   Test::More: 0.8
-  XML::Compile::SOAP11: 2.37
-  XML::Compile::SOAP12: 2.04
-version: 0.11
+  XML::Compile::SOAP11: 3.00
+  XML::Compile::WSDL11: 3.00
+version: 0.12
