Import of MARKOV/Payment-Sisow-0.13 from CPAN.
gitpan-cpan-distribution: Payment-Sisow
gitpan-cpan-version:      0.13
gitpan-cpan-path:         MARKOV/Payment-Sisow-0.13.tar.gz
gitpan-cpan-author:       MARKOV
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -24,5 +24,6 @@ requires:
   Log::Report: 1.00
   Test::More: 0.8
   XML::Compile::SOAP11: 3.00
+  XML::Compile::SOAP12: 3.00
   XML::Compile::WSDL11: 3.00
-version: 0.12
+version: 0.13
